Determined room sequence, added exits to all rooms to create sequence, added falling room for "hole in floor", rearranged "organised"
? The room sequence was originally going to be based on a randomised playthrough of the original game for "authenticity", but then I felt like the more Bitsy thing to do would be to actually be considerate of the room order (especially since there's no way to actually make it random). So I spent some time working on a room order that didn't have sequential numbers, introduced the ideas in a way that wouldn't be too confusing, and generally tried to make the sequence make some sense while still being weird.

? Each room has its number in the top left corner. I had originally assumed I would have interstitials with the number, thinking that's how v r 1 worked, but when I checked the game it actually flashes the number over the scene itself. I could have tried this with dialogs, but it didn't feel elegant and didn't put you in the world right away. The numbering on the screen works well, I think. Discovered while doing this that v r 1 has a bug that causes it to label two rooms as 1, which is depressing.

? Adding all the exits was surprisingly easy - I was worried after my first Bitsy experiences, but it's actually fine. I settled on create a symbolic item you collect to switch rooms so that you can know how to move on. I placed it almost always in the bottom left so that it's kind of out of the action, encouraging exploration of the room situation before you leave the scene. It's a pretty big departure from v r 1's invisible triggers, but invisible triggers in this game feel like they'd be too much of a shock and they conflict with being able to have dialog for the windows.

? Added a "falling" room for the hole in floor sequence. So if you go into the room you are told you're "falling" and then enter another room. Originally it was going to be completely blank and just as soon as you hit a movement key you'd trigger an exit to the nex

--- a/index.html
+++ b/index.html
@@ -43,9 +43,15 @@ NAME interstitial
 255,255,255
 0,0,0
 
+PAL 5
+NAME falling
+66,66,66
+66,66,66
+66,66,66
+
 ROOM 0
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
+1o,1u,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,0,0,0,0,0,0,0,1o,1o,1o,1o,1o
 1o,1o,1o,1o,c,b,b,0,b,b,d,1o,1o,1o,1o,1o
@@ -61,11 +67,13 @@ ROOM 0
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 NAME start
+ITM a 1,14
+EXT 1,14 1 14,8
 PAL 0
 
 ROOM 1
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
+1o,1t,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,0,0,0,0,0,0,0,0,0,0,0,0,0,1o,1o
 1o,c,b,b,0,b,b,k,b,b,0,b,b,d,1o,1o
@@ -78,14 +86,16 @@ ROOM 1
 1o,0,0,0,0,0,0,0,0,0,0,0,0,0,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
+1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 NAME door_to_door
+ITM a 1,14
+EXT 1,14 6 13,8
 PAL 0
 
 ROOM 2
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
+1o,21,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,0,0,0,0,0,0,0,1o,1o,1o,1o,1o
 1o,1o,1o,1o,c,b,b,0,b,b,d,1o,1o,1o,1o,1o
@@ -99,13 +109,17 @@ ROOM 2
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o1o,
+1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,0
 NAME hole_in_floor
+ITM a 1,14
+ITM c 9,8
+EXT 1,14 c 13,8
+EXT 9,8 k 8,0
 PAL 0
 
 ROOM 3
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
+1o,1u,1y,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,0,0,0,0,0,0,0,1o,1o,1o,1o,1o
 1o,1o,1o,1o,c,b,b,0,b,b,d,1o,1o,1o,1o,1o
@@ -119,13 +133,15 @@ ROOM 3
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
+1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 NAME locked_out
+ITM a 1,14
+EXT 1,14 f 13,8
 PAL 0
 
 ROOM 4
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
+1o,1u,20,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,c,b,b,b,b,b,d,1o,1o,1o,1o,1o
 1o,1o,1o,1o,c,b,b,b,b,b,d,1o,1o,1o,1o,1o
 1o,1o,1o,1o,c,b,b,q,b,b,d,1o,1o,1o,1o,1o
@@ -141,31 +157,35 @@ ROOM 4
 1o,1o,1o,1o,0,0,0,0,0,0,0,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 NAME window_to_window
+ITM a 1,14
+EXT 1,14 2 13,8
 PAL 0
 
 ROOM 5
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+0,1u,0,1x,0,q,0,q,0,q,0,q,0,q,0,0
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,q,0,q,0,q,0,q,0,q,0,q,0,q,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,q,0,q,0,q,0,q,0,q,0,b,0,b,0,0
+0,b,0,b,0,b,0,b,0,b,0,b,0,b,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,b,0,b,0,b,0,b,0,b,0,b,0,c,0,0
+0,b,0,c,0,c,0,c,0,c,0,c,0,c,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,c,0,c,0,c,0,c,0,c,0,d,0,d,0,0
+0,d,0,d,0,d,0,d,0,d,0,d,0,e,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,d,0,d,0,d,0,d,0,e,0,e,0,e,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,e,0,e,0,h,0,f,0,n,0,0,0,0,0,0
+0,e,0,e,0,e,0,e,0,h,0,f,0,n,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 NAME organised
+ITM a 5,15
+EXT 5,15 g 7,7
 PAL 0
 
 ROOM 6
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
+1o,1u,1u,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,0,0,0,0,0,0,0,1o,1o,1o,1o,1o
 1o,1o,1o,1o,c,b,b,0,b,b,d,1o,1o,1o,1o,1o
@@ -181,11 +201,13 @@ ROOM 6
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 NAME dark
-PAL 1
+ITM a 1,14
+EXT 1,14 9 13,8
+PAL 0
 
 ROOM 7
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
+1o,1z,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,0,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,0,1o
@@ -201,6 +223,10 @@ ROOM 7
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 NAME door_in_floor_start
+ITM a 1,14
+EXT 1,14 5 1,13
+EXT 8,8 8 8,7
+EXT 7,8 8 8,7
 PAL 2
 
 ROOM 8
@@ -218,20 +244,22 @@ ROOM 8
 1r,1r,1r,1r,1r,0,0,0,0,0,0,1r,1r,1r,1r,1r
 1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r
 1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r
-1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r
+1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r
 1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r,1r
 NAME door_in_floor_room
+ITM a 6,9
+EXT 6,9 5 1,13
 PAL 0
 
 ROOM 9
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
+1o,1u,1v,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,0,0,0,0,0,0,0,0,0,1o,1o,1o,1o
 1o,1o,1o,0,e,c,d,e,b,b,q,0,1o,1o,1o,1o
 1o,1o,1o,0,d,h,q,b,q,c,0,0,1o,1o,1o,1o
-1o,0,1o,0,b,q,c,b,d,0,b,0,1o,1o,1o,1o,1o
-1o,1o,1o,0,e,0,b,q,q,c,q,0,1o,1o,1o,1o,1o
+1o,0,1o,0,b,q,c,b,d,0,b,0,1o,1o,1o,1o
+1o,1o,1o,0,e,0,b,q,q,c,q,0,1o,1o,1o,1o
 1o,1o,1o,0,0,d,q,0,d,q,c,0,1o,1o,1o,1o
 1o,1o,1o,0,0,e,f,0,q,q,d,0,1o,1o,1o,1o
 1o,1o,1o,0,q,c,b,e,n,0,0,0,1o,1o,1o,1o
@@ -241,11 +269,13 @@ ROOM 9
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 NAME pieces
+ITM a 1,14
+EXT 1,14 e 13,8
 PAL 0
 
 ROOM a
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
+1o,20,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,0,0,0,0,0,0,0,1o,1o,1o,1o,1o
 1o,1o,1o,1o,c,b,b,0,b,b,d,1o,1o,1o,1o,1o
@@ -261,11 +291,13 @@ ROOM a
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 NAME floating_objects
+ITM a 1,14
+EXT 1,14 7 13,8
 PAL 0
 
 ROOM b
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
+1o,1v,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,0,0,0,0,0,0,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,c,b,b,b,b,r,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,c,b,0,s,b,r,1o,1o,1o,1o,1o
@@ -279,13 +311,15 @@ ROOM b
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o1o,
+1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,0
 NAME door_down
+ITM a 1,14
+EXT 1,14 a 13,8
 PAL 0
 
 ROOM c
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
+1o,1u,1t,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,12,11,11,11,11,11,13,1o,1o,1o,1o,1o
 1o,1o,1o,1o,c,b,b,0,b,b,d,1o,1o,1o,1o,1o
@@ -301,11 +335,13 @@ ROOM c
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 NAME upsidedown
+ITM a 1,14
+EXT 1,14 h 13,8
 PAL 0
 
 ROOM d
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
+1o,1x,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,0,0,0,0,0,0,0,1o,1o,1o,1o,1o
 1o,1o,1o,0,c,b,b,0,b,b,d,0,1o,1o,1o,1o
@@ -317,15 +353,17 @@ ROOM d
 1o,1o,1o,0,n,e,e,e,e,e,d,0,1o,1o,1o,1o
 1o,1o,1o,1o,0,0,0,0,0,0,0,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
+1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 NAME intersect
+ITM a 1,14
+EXT 1,14 3 13,8
 PAL 0
 
 ROOM e
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
+1o,1w,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,0,0,0,0,0,0,0,1o,1o,1o,1o,1o
 1o,1o,1o,1o,c,b,b,0,b,b,d,1o,1o,1o,1o,1o
@@ -341,11 +379,13 @@ ROOM e
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 NAME palette_swap
+ITM a 1,14
+EXT 1,14 d 13,8
 PAL 3
 
 ROOM f
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
+1o,1u,1z,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,0,0,0,0,0,0,0,1o,1o,1o,1o,1o
 1o,1o,1o,1o,c,b,b,0,b,b,d,1o,1o,1o,1o,1o
@@ -369,6 +409,8 @@ ITM 4 6,8
 ITM 5 6,9
 ITM 6 5,9
 ITM 7 7,4
+ITM a 1,14
+EXT 1,14 4 13,8
 PAL 0
 
 ROOM g
@@ -393,7 +435,7 @@ PAL 0
 
 ROOM h
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
+1o,22,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,0,0,0,0,0,0,0,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1f,1h,1h,0,1h,1h,1j,1o,1o,1o,1o,1o
@@ -409,6 +451,8 @@ ROOM h
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 NAME anim
+ITM a 1,14
+EXT 1,14 b 13,8
 PAL 0
 
 ROOM i
@@ -453,6 +497,31 @@ ROOM j
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 NAME exit_test_2
 ITM 9 7,7
+PAL 0
+
+ROOM k
+1r,1r,1r,1r,1r,1r,0,0,0,0,0,1r,1r,1r,1r,1r
+1r,1r,1r,1r,1r,1r,0,0,0,0,0,1r,1r,1r,1r,1r
+1r,1r,1r,1r,1r,1r,0,0,0,0,0,1r,1r,1r,1r,1r
+1r,1r,1r,1r,1r,1r,0,0,0,0,0,1r,1r,1r,1r,1r
+1r,1r,1r,1r,1r,1r,0,0,0,0,0,1r,1r,1r,1r,1r
+1r,1r,1r,1r,1r,1r,0,0,0,0,0,1r,1r,1r,1r,1r
+1r,1r,1r,1r,1r,1r,0,0,0,0,0,1r,1r,1r,1r,1r
+1r,1r,1r,1r,1r,1r,0,0,0,0,0,1r,1r,1r,1r,1r
+1r,1r,1r,1r,1r,1r,0,0,0,0,0,1r,1r,1r,1r,1r
+1r,1r,1r,1r,1r,1r,0,0,0,0,0,1r,1r,1r,1r,1r
+1r,1r,1r,1r,1r,1r,0,0,0,0,0,1r,1r,1r,1r,1r
+1r,1r,1r,1r,1r,1r,0,0,0,0,0,1r,1r,1r,1r,1r
+1r,1r,1r,1r,1r,1r,0,0,0,0,0,1r,1r,1r,1r,1r
+1r,1r,1r,1r,1r,1r,0,0,0,0,0,1r,1r,1r,1r,1r
+1r,1r,1r,1r,1r,1r,0,0,0,0,0,1r,1r,1r,1r,1r
+1r,1r,1r,1r,1r,1r,0,0,0,0,0,1r,1r,1r,1r,1r
+NAME falling
+EXT 7,15 c 13,8
+EXT 6,15 c 13,8
+EXT 8,15 c 13,8
+EXT 9,15 c 13,8
+EXT 10,15 c 13,8
 PAL 0
 
 TIL 10
@@ -571,6 +640,39 @@ TIL 19
 11111111
 NAME intersect_upper_main
 WAL true
+
+TIL 20
+00000000
+00011100
+00100010
+00100000
+00111100
+00100010
+00100010
+00011100
+NAME 6
+
+TIL 21
+00000000
+00011100
+00100010
+00100010
+00011100
+00100010
+00100010
+00011100
+NAME 8
+
+TIL 22
+00000000
+00111110
+00100010
+00000010
+00000100
+00001000
+00001000
+00001000
+NAME 7
 
 TIL a
 11111111
@@ -1155,6 +1257,95 @@ TIL 1r
 10100000
 00000100
 NAME underground
+WAL true
+
+TIL 1s
+11111111
+10000001
+10111101
+10100101
+10100101
+10111101
+10000001
+11111111
+NAME exit
+
+TIL 1t
+00000000
+00111110
+00100000
+00111100
+00000010
+00000010
+00100010
+00011100
+NAME 5
+
+TIL 1u
+00000000
+00001000
+00011000
+00101000
+00001000
+00001000
+00001000
+00111110
+NAME 1
+
+TIL 1v
+00000000
+00111110
+00000100
+00001000
+00011100
+00000010
+00100010
+00011100
+NAME 3
+
+TIL 1w
+00000000
+00011100
+00100010
+00100010
+00011110
+00000010
+00100010
+00011100
+NAME 9
+
+TIL 1x
+00000000
+00011100
+00100010
+00000010
+00000100
+00001000
+00010000
+00111110
+NAME 2
+
+TIL 1y
+00000000
+00011100
+00100010
+00100110
+00101010
+00110010
+00100010
+00011100
+NAME 0
+
+TIL 1z
+00000000
+00000100
+00001100
+00010100
+00100100
+00111110
+00000100
+00000100
+NAME 4
 
 SPR 10
 00000110
@@ -1572,6 +1763,15 @@ SPR 44
 10000001
 10000001
 11111111
+>
+00000000
+00000000
+00000000
+00000000
+00000000
+00000000
+00000000
+00000000
 NAME anim_window
 POS h 7,4
 
@@ -1621,7 +1821,7 @@ SPR A
 00111100
 00111100
 00011000
-POS 0 14,8
+POS 0 13,8
 
 SPR a
 00000000
@@ -2021,7 +2221,7 @@ SPR 1g
 01100000
 01100000
 NAME org_bed_1
-POS 5 13,11
+POS 5 3,13
 
 SPR 1h
 11111100
@@ -2033,7 +2233,7 @@ SPR 1h
 00000110
 00000110
 NAME org_bed_2
-POS 5 1,13
+POS 5 5,13
 
 SPR 1i
 00000110
@@ -2045,7 +2245,7 @@ SPR 1i
 00001110
 11111100
 NAME org_bed_3
-POS 5 3,13
+POS 5 7,13
 
 SPR 1j
 01100000
@@ -2057,7 +2257,7 @@ SPR 1j
 01110000
 00111111
 NAME org_bed_4
-POS 5 5,13
+POS 5 9,13
 
 SPR 1k
 00000000
@@ -2069,7 +2269,7 @@ SPR 1k
 01111110
 00000000
 NAME org_trunk
-POS 5 7,13
+POS 5 11,13
 
 SPR 1l
 00000000
@@ -2081,7 +2281,7 @@ SPR 1l
 00011000
 00000000
 NAME org_tube
-POS 5 9,13
+POS 5 13,13
 
 SPR 1m
 00000000
@@ -2093,7 +2293,7 @@ SPR 1m
 10101010
 00000000
 NAME org_radiator
-POS 5 11,13
+POS 5 1,15
 
 SPR 1n
 00000000
@@ -2846,7 +3046,7 @@ SPR 3u
 10000001
 11111111
 NAME org_w
-POS 5 11,11
+POS 5 3,15
 
 SPR 3v
 11111111
@@ -3028,6 +3228,40 @@ ITM 9
 NAME test_item_2
 DLG ITM_9
 
+ITM a
+11111111
+10000001
+10111101
+10100101
+10100101
+10111101
+10000001
+11111111
+NAME exit
+
+ITM b
+10000001
+01000010
+00100100
+00011000
+00011000
+00100100
+01000010
+10000001
+NAME falling_exit
+
+ITM c
+00000000
+00000000
+00000000
+00000000
+00000000
+00000000
+00000000
+00000000
+NAME falling_exit_dialog
+DLG ITM_a
+
 DLG ITM_0
 You pick up the metal tube
 
@@ -3075,6 +3309,9 @@ You look through the window.
 
 DLG ITM_9
 Landed on an item...
+
+DLG ITM_a
+You fall and fall...
 
 VAR a
 42
