Set page background to black, fixed size to 560x560, added number to end scene
? Experimenting with some of the elements to make this presentable, notably the 560x560 is meant to be helpful on itch.io? I read that in [this tutorial](http://www.clairemorleyart.com/a-bitsy-tutorial) at any rate. Will see how it actually looks online after this push.

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ PAL 0
 
 ROOM g
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
-1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
+1o,1u,22,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o,1o
 1o,1o,1o,1o,0,0,0,0,0,0,0,1o,1o,1o,1o,1o
 1o,1o,1o,1o,c,b,b,0,b,b,d,1o,1o,1o,1o,1o
@@ -453,27 +453,6 @@ ROOM h
 NAME anim
 ITM a 1,14
 EXT 1,14 b 13,8
-PAL 0
-
-ROOM j
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-NAME exit_test_2
-ITM 9 7,7
 PAL 0
 
 ROOM k
@@ -3670,24 +3649,22 @@ VAR a
 </script>
 
 <style>
-html {
-	margin:0px;
-	padding:0px;
-}
+/*html { height: 592px; }*/
 
 body {
-	margin:0px;
-	padding:0px;
+	width:100%;
+	height:100%;
 	overflow:hidden;
-	background:#ffffff;
+	background:#000000;
 }
 
 #game {
 	background:black;
-	width:100vw;
-	max-width:100vh;
-	margin:auto;
-	display:block;
+	margin: 0 auto;
+	margin-top: 40px;
+	display: block;
+	width:560px;
+	height:@@Z;
 }
 </style>
 
