Changed back to full screen, tried to fix the keydown repeat issue (but can't see anything that would suggest it)

--- a/index.html
+++ b/index.html
@@ -3649,22 +3649,24 @@ VAR a
 </script>
 
 <style>
-/*html { height: 592px; }*/
+html {
+	margin:0px;
+	padding:0px;
+}
 
 body {
-	width:100%;
-	height:100%;
+	margin:0px;
+	padding:0px;
 	overflow:hidden;
 	background:#000000;
 }
 
 #game {
 	background:black;
-	margin: 0 auto;
-	margin-top: 40px;
-	display: block;
-	width:560px;
-	height:@@Z;
+	width:100vw;
+	max-width:100vh;
+	margin:auto;
+	display:block;
 }
 </style>
 
